# base_library_backend

./: .env.example  .gitignore  Dockerfile.artifacts-service  Dockerfile.core  Dockerfile.prompt-config-service  Makefile  README.md  docker-compose.yaml  init-db.sql  pyproject.toml  requirements.txt  restore_database.ps1  test_opik_connection.py
artifacts-service/: README.md  __init__.py  __main__.py  auth.py  auth_models.py  auth_models_api.py  clerk_auth.py  exceptions.py  main.py  models.py  models_web3.py  pyproject.toml  settings.py  storage.py  web3_auth.py
artifacts-service/alembic/: env.py
artifacts-service/alembic/versions/: e6g9b2h3i4j5_add_web3_authentication.py  f0cfe9e964b9_add_auth_codes_table.py  k5l6m7n8o9p0_add_materials_table.py  l1m2n3o4p5q6_add_nft_fields_to_materials.py  m7n8o9p0q1r2_add_index_nft_content_hash.py  n8o9p0q1r2s3_add_clerk_user_id.py
artifacts-service/services/: __init__.py  content_hash.py  material_classifier.py  permissions.py
artifacts-service/services/export/: __init__.py  base.py  markdown_export.py  pdf_export.py  zip_export.py
configs/: graph.yaml  prompts.yaml  (+1 more)
core/: __init__.py  __main__.py  pyproject.toml
core/api/: main.py
core/config/: config_loader.py  config_manager.py  config_models.py  settings.py
core/core/: graph.py  graph_manager.py  state.py
core/models/: hitl_config.py  model_factory.py
core/nodes/: __init__.py  answers.py  base.py  content.py  edit_material.py  input_processing.py  questions.py  recognition.py  synthesis.py
core/security/: __init__.py  exceptions.py  guard.py
core/services/: artifacts_api_client.py  artifacts_manager.py  file_utils.py  hitl_manager.py  opik_client.py  opik_langchain_callback.py  prompt_client.py
core/utils/: llm_usage.py  logging_utils.py  utils.py
prompt-config-service/: __init__.py  __main__.py  alembic.ini  config.py  database.py  initial_data.yaml  main.py  pyproject.toml  seed.py
prompt-config-service/alembic/: env.py
prompt-config-service/alembic/versions/: 954ed3a47a38_add_seed_data_with_name_support.py  c541edc48932_initial_migration_with_name_field.py  d5f8a1b2c3d4_migrate_to_web3_authentication.py  e1f2g3h4i5j6_add_clerk_user_id.py
prompt-config-service/api/: __init__.py  placeholders.py  profiles.py  prompts.py  users.py
prompt-config-service/models/: __init__.py  placeholder.py  profile.py  user_settings.py
prompt-config-service/repositories/: __init__.py  placeholder_repo.py  profile_repo.py  user_settings_repo.py
prompt-config-service/schemas/: __init__.py  placeholder.py  profile.py  prompt.py  user_settings.py
prompt-config-service/services/: __init__.py  placeholder_service.py  profile_service.py  prompt_service.py  user_service.py
prompt-config-service/utils/: __init__.py  auth.py  jinja_renderer.py  template_loader.py
(+16 files in other folders)
